Scrollbar fix.

--- a/src/App.css
+++ b/src/App.css
@@ -3,9 +3,9 @@
 } */
 
 /* Material UI symbols from the index.html  */
-.material-symbols-outlined {
-  font-variation-settings: "FILL" 0, "wght" 500, "GRAD" 0, "opsz" 48;
-  /* margin-right:5px; */
+
+body::-webkit-scrollbar {
+  display: none;
 }
 
 .login-field {
